--- a/public/templates/init_test.html
+++ b/public/templates/init_test.html
@@ -1,5 +1,7 @@
-<div class="content">
-	<h2>Please answer the given questions:</h2>
+<div class="content" style="margin-bottom: 100px">
+	<p>In this section, in order to test your knowledge, we will conduct a brief test, which will measure your current skill set. Take your time while doing the test because based on the results you will be creating your action contract.</p>
+
+	<h3>Please answer the given questions:</h3>
 
 	<div class="questions"></div>
 	<br />
