--- a/public/templates/action_contract.html
+++ b/public/templates/action_contract.html
@@ -1,3 +1,98 @@
 <div class="section is-centered">
 	<div id="chartContainer"></div>
+
+	<div class="content">
+		<h3>Now let's prepare an action contract</h3>
+
+		<div class="box">
+			<p>Based on the main challenge you have identified with the test, choose a few competencies you will improve.</p>
+
+			<div class="field">
+			  <label class="label">Competency</label>
+			  <div class="control">
+			    <div class="select">
+			      <select>
+			        <option>Teamwork</option>
+			        <option>Knowledge</option>
+			        <option>Social</option>
+			        <option>Attitude</option>
+			      </select>
+			    </div>
+			  </div>
+			</div>
+
+			<p>Please describe how you will improve this competency.</p>
+
+			<p>I will improve this competency</p>
+			<div class="field">
+			  <label class="label">By:</label>
+			  <div class="control">
+			    <textarea class="textarea" placeholder="Doing what?"></textarea>
+			  </div>
+			</div>
+
+			<hr />
+
+			<div class="field">
+			  <label class="label">Competency</label>
+			  <div class="control">
+			    <div class="select">
+			      <select>
+			        <option>Teamwork</option>
+			        <option>Knowledge</option>
+			        <option>Social</option>
+			        <option>Attitude</option>
+			      </select>
+			    </div>
+			  </div>
+			</div>
+
+			<p>Please describe how you will improve this competency.</p>
+
+			<p>I will improve this competency</p>
+			<div class="field">
+			  <label class="label">By:</label>
+			  <div class="control">
+			    <textarea class="textarea" placeholder="Doing what?"></textarea>
+			  </div>
+			</div>
+
+			<hr />
+
+			<div class="field">
+			  <label class="label">Competency</label>
+			  <div class="control">
+			    <div class="select">
+			      <select>
+			        <option>Teamwork</option>
+			        <option>Knowledge</option>
+			        <option>Social</option>
+			        <option>Attitude</option>
+			      </select>
+			    </div>
+			  </div>
+			</div>
+
+			<p>Please describe how you will improve this competency.</p>
+
+			<p>I will improve this competency</p>
+			<div class="field">
+			  <label class="label">By:</label>
+			  <div class="control">
+			    <textarea class="textarea" placeholder="Doing what?"></textarea>
+			  </div>
+			</div>
+
+			<hr />
+
+			<p>Which is the method that can help you most in your action plan implementation?</p>
+
+			<div class="field">
+			  <label class="label">Method:</label>
+			  <div class="control">
+			    <textarea class="textarea" placeholder="Doing what?"></textarea>
+			  </div>
+			</div>
+		</div>
+	</div>
 </div>
